subindo o projeto de Monogrfias no teste

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "VisualStudioConnection": "Server=(localdb)\\mssqllocaldb;Database=dbMonografiasIfma-Auth;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnectionString": "Server=HENRIQUE;Database=dbMonografiasIfma;User Id=sa; Password=root; Encrypt=False"
+    "DefaultConnectionString": "Server=DESKTOP-615E2DA;Database=dbMonografiasIfma;User Id=sa; Password=123456; Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
