monografia create funcionando

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "VisualStudioConnection": "Server=(localdb)\\mssqllocaldb;Database=dbMonografiasIfma-Auth;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnectionString": "Server=DESKTOP-615E2DA;Database=dbMonografiasIfma;User Id=sa; Password=123456; Encrypt=False"
+    "VisualStudioConnection": "Server=(localdb)\\mssqllocaldb;Database=dbMonografiasIfma;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DiogoConnectionString": "Server=DESKTOP-615E2DA;Database=dbMonografiasIfma;User Id=sa; Password=123456; Encrypt=False",
+    "ReisConnectionString": "Server=HENRIQUE;Database=dbMonografiasIfma;User Id=sa; Password=root; Encrypt=False"
+
   },
   "Logging": {
     "LogLevel": {
